find_package(DEVIL REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Sophus REQUIRED)
find_package(OpenCV2 REQUIRED)
find_package(HAL 0.1 REQUIRED)
find_package(PbMsgs 0.1 REQUIRED)
find_package(Pangolin 0.1 REQUIRED)
find_package(SceneGraph 0.1 REQUIRED)
find_package(Calibu 0.1 REQUIRED)
find_package(BA REQUIRED)
find_package(MINIGLOG REQUIRED)
find_package(TBB QUIET)

if(TBB_FOUND)
    add_definitions(-DHAVE_TBB)
endif()

include_directories(${LIBGUI_INCLUDE_DIR})
include_directories(${DEVIL_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${Sophus_INCLUDE_DIR})
include_directories(${OpenCV2_INCLUDE_DIR})
include_directories(${HAL_INCLUDE_DIRS})
include_directories(${PbMsgs_INCLUDE_DIRS})
include_directories(${Pangolin_INCLUDE_DIRS})
include_directories(${SceneGraph_INCLUDE_DIRS})
include_directories(${Calibu_INCLUDE_DIRS})
include_directories(${BA_INCLUDE_DIRS})
include_directories(${TBB_INCLUDE_DIRS})

link_directories(${Pangolin_LIBRARY_DIRS})

list(APPEND HDRS dtrack.h)
list(APPEND SRCS main.cpp)

add_executable(devil-app ${HDRS} ${SRCS})

add_dependencies(devil-app devil libGUI)

target_link_libraries(devil-app ${LIBGUI_LIBRARIES})
target_link_libraries(devil-app ${DEVIL_LIBRARIES})
target_link_libraries(devil-app ${OpenCV2_LIBRARIES})
target_link_libraries(devil-app ${HAL_LIBRARIES})
target_link_libraries(devil-app ${PbMsgs_LIBRARIES})
target_link_libraries(devil-app ${Pangolin_LIBRARIES})
target_link_libraries(devil-app ${SceneGraph_LIBRARIES})
target_link_libraries(devil-app ${Calibu_LIBRARIES})
target_link_libraries(devil-app ${BA_LIBRARIES})
if(TBB_FOUND)
  target_link_libraries(devil-app ${TBB_LIBRARIES})
endif()
