cmake_policy(SET CMP0024 OLD)

find_package(VIDTrack REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Sophus REQUIRED)
find_package(OpenCV2 REQUIRED)
find_package(HAL 0.1 REQUIRED)
find_package(Protobuf REQUIRED)
find_package(Pangolin 0.1 REQUIRED)
find_package(SceneGraph 0.1 REQUIRED)
find_package(Calibu 0.1 REQUIRED)

include_directories(${LIBGUI_INCLUDE_DIR})
include_directories(${VIDTrack_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${Sophus_INCLUDE_DIR})
include_directories(${OpenCV2_INCLUDE_DIR})
include_directories(${HAL_INCLUDE_DIRS})
include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${Pangolin_INCLUDE_DIRS})
include_directories(${SceneGraph_INCLUDE_DIRS})
include_directories(${Calibu_INCLUDE_DIRS})

link_directories(${Pangolin_LIBRARY_DIRS})

list(APPEND HDRS )
list(APPEND SRCS main.cpp)

add_executable(tracker ${HDRS} ${SRCS})

add_dependencies(tracker vidtrack libGUI)

target_link_libraries(tracker ${LIBGUI_LIBRARIES})
target_link_libraries(tracker ${VIDTrack_LIBRARIES})
target_link_libraries(tracker ${OpenCV2_LIBRARIES})
target_link_libraries(tracker ${HAL_LIBRARIES})
target_link_libraries(tracker ${PROTOBUF_LIBRARIES})
target_link_libraries(tracker ${Pangolin_LIBRARIES})
target_link_libraries(tracker ${SceneGraph_LIBRARIES})
target_link_libraries(tracker ${Calibu_LIBRARIES})
